--- a/智能农业/res/values/strings.xml
+++ b/智能农业/res/values/strings.xml
@@ -32,6 +32,9 @@
 <string name="buzzer">报警</string>
 <string name="open_str">打开</string>
 <string name="close_str">关闭</string>
-	
+
+
+	<string name="waiter">加载中...</string>
+
 	
 </resources>
