--- a/智能农业/res/values/strings.xml
+++ b/智能农业/res/values/strings.xml
@@ -3,7 +3,7 @@
    <string name="app_name">智慧农业_王鹏飞</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-	<string name="version_string">欢迎进入\n智能农业系统!\n版本号：20.6.05</string>
+	<string name="version_string">欢迎进入\n智能农业系统!\n版本号：20.6.02</string>
     <string name="login_str">登录</string>
     <string name="register_str">用户注册</string>
     <string name="setting_ip_str">Ip设置</string>
@@ -50,5 +50,5 @@
 <string name="no_setting_authority_exp">对不起，您没有该设置权限！</string>
 <string name="not_show_next_time">下次启动时显示用户引导界面</string>
 
-	
+	<string name="setting_str">设置</string>
 </resources>
